--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.28.1",
-    "clsx": "^2.1.1",
+    "class-variance-authority": "^0.7.1",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwind-variants": "^0.3.1"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "typescript": "^5",
